helpdesk-service/kubernetes/template.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <name_project>
  namespace: <namespace>
spec:
  selector:
    matchLabels:
      app: <name_project>-selector
      role: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  template:
    metadata:
      labels:
        app: <name_project>-selector
        role: tomcat
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: <image_name>:<image_tags>
          imagePullPolicy: Always
          name: <name_project>-pod
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","sleep 20"]
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 60
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 2
            httpGet:
              path: /
              port: 8080
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Asia/Jakarta
      imagePullSecrets:
        - name: gitlab-auth
