helpdesk-service/kubernetes/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helpdesk-service
  namespace: development
spec:
  selector:
    app: helpdesk-service-selector
    role: tomcat
  ports:
  - name: http
    port: port
    targetPort: port
  type: NodePort
