helpdesk-service/kubernetes/template.sa.yaml
apiVersion: v1
kind: Service
metadata:
  name: <name_project>
  namespace: <namespace>
spec:
  selector:
    app: <name_project>
    role: tomcat
  ports:
  - name: http
    port: port
    targetPort: port
  type: NodePort
