helpdesk-service/kubernetes/template.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <name_project>-ing
  namespace: <namespace>
  annotations:
    ingress.appscode.com/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - live-<name_project>.voltras.net
    secretName: voltrasnet-tls
  rules:
  - host: live-<name_project>.voltras.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: <name_project>
            port:
              number: 8080
